overlapping issue fixed

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -34,6 +34,7 @@
   cursor: pointer;
   position: sticky;
   top: 0;
+  z-index: 9999; /* Higher than any content */
 }
 .dashboard-container {
   width: 100%;
@@ -280,6 +281,7 @@
   padding-top: 70px;
   height: 100vh;
   padding-left: 100px;
+  position: relative;
 }
 .section3-t1 {
   height: 76vh;
